Mon Oct 11 17:42:25 1999  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (rb_intern): should generate distinct ID_ATTRSET symbols
	  for the name with multiple `='s at the end.

	* Makefile.in (CPPFLAGS): separate cpp flags from CFLAGS.

Mon Oct 11 07:27:05 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (rb_eval): should not execute the `else' clause on the
	  case the exceptions are handled by the `rescue' clause.

	* signal.c (Init_signal): ignore SIGPIPE by default.

Mon Oct  4 12:42:32 1999  Kazuhiko Izawa  <izawa@erec.che.tohoku.ac.jp>

	* pack.c (pack_unpack): % in printf format should be %%.

Mon Oct  4 10:01:40 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* variable.c (rb_obj_instance_variables): should always return
	  array for all object can have instance variables now.

Mon Oct  4 00:08:34 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* pack.c (OFF16): need to adjust pointer address to pack/unpack on
	  64bit machines.

Sun Oct 03 03:05:59 1999  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* time.c (time_arg): mktime y2k problem.

Sun Sep 26 16:54:45 1999  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* parse.y (here_document): `\r' handling for here documents.

Wed Sep 22 09:20:11 1999  Masahiro Tomita  <tommy@tmtm.org>

	* ext/socket/socket.c: SOCKS5 support.

Wed Sep 22 00:35:30 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (rb_str_include): should return boolean value.

	* regex.c (re_compile_fastmap): wrong comparison with mbc.

	* eval.c (specific_eval): default sourcefile name should be
	  "(eval)" for module_eval etc.

Wed Sep 22 00:06:07 1999  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* win32/Makefile: update rules.

	* io.c (io_fread): should not assign in char, it maybe -1.

Tue Sep 21 23:57:54 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (call_trace_func): should not propagate retval in
	  trace_func. 

Mon Sep 20 21:35:39 1999  Katsuyuki Komatsu  <komatsu@sarion.co.jp>
