@@ -1,4 +1,4 @@
-#define RUBY_VERSION "1.4.2"
-#define RUBY_RELEASE_DATE "1999-09-18"
-#define RUBY_VERSION_CODE 142
-#define RUBY_RELEASE_CODE 19990918
+#define RUBY_VERSION "1.4.3"
+#define RUBY_RELEASE_DATE "1999-10-12"
+#define RUBY_VERSION_CODE 143
+#define RUBY_RELEASE_CODE 19991012
